--- a/Educational-Website-Frontend-React-main/src/components/about/about.css
+++ b/Educational-Website-Frontend-React-main/src/components/about/about.css
@@ -37,7 +37,7 @@
   color: #999999;
 }
 .aboutHome .item:hover {
-  background-color: #1eb2a6;
+  background-color: #383838;
   color: #fff;
   cursor: pointer;
   box-shadow: 0 5px 25px -2px rgb(0 0 0 / 6%);
@@ -47,10 +47,10 @@
 }
 /*----------awrapper------------*/
 .awrapper {
-  background-color: #eeb93d;
+  background-color: #f1ba2d;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 80%;
+  width: 90%;
   margin: auto;
   border-radius: 20px;
   margin-top: 10px;
